@@ -12,7 +12,7 @@ def simpleapp(environ, start_response):
     start_response(status, response_headers)
     request = WSGIRequest(environ)
     return ['Hello world!\n', 'The get is %s' % str(request.GET),
-        'Val is %s' % request.GET.get('name')]
+        ' and Val is %s' % request.GET.get('name')]
 
 def test_gets():
     app = TestApp(simpleapp)
@@ -21,5 +21,5 @@ def test_gets():
     assert "get is {}" in res
     
     res = app.get('/?name=george')
-    assert "get is {'name': ['george']}" in res
-    assert "Val is george" in res
+    res.mustcontain("get is multidict([('name', 'george')])")
+    res.mustcontain("Val is george")
